<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputEditTextMain"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/EnterHere"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/writeInternalButtonMain"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/WriteInternal"
        app:layout_constraintBottom_toTopOf="@+id/writeExternalButtonMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEditTextMain" />

    <Button
        android:id="@+id/readInternalButtonMain"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ReadInternal"
        app:layout_constraintBottom_toTopOf="@+id/readExternalButtonMain"
        app:layout_constraintEnd_toStartOf="@+id/deleteInternalButtonMain"
        app:layout_constraintStart_toEndOf="@+id/writeInternalButtonMain"
        app:layout_constraintTop_toBottomOf="@+id/inputEditTextMain" />

    <Button
        android:id="@+id/deleteInternalButtonMain"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/DeleteInternal"
        app:layout_constraintBottom_toTopOf="@+id/deleteExternalButtonMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEditTextMain" />

    <Button
        android:id="@+id/writeExternalButtonMain"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/WriteExternal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeInternalButtonMain" />

    <Button
        android:id="@+id/readExternalButtonMain"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ReadExternal"
        app:layout_constraintEnd_toStartOf="@+id/deleteExternalButtonMain"
        app:layout_constraintStart_toEndOf="@+id/writeExternalButtonMain"
        app:layout_constraintTop_toBottomOf="@+id/readInternalButtonMain" />

    <Button
        android:id="@+id/deleteExternalButtonMain"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/DeleteExternal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteInternalButtonMain" />

    <EditText
        android:id="@+id/outputEditTextMain"
        android:layout_width="0dp"
        android:layout_height="152dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>